--- a/src/back.html
+++ b/src/back.html
@@ -63,15 +63,19 @@
             {{^SentenceFurigana}} {{furigana:Sentence}} {{/SentenceFurigana}}
         </div>
 
-  <!-- The entire definition blockquote -->
-  <div class="def-info-container"><div class="def-info"></div></div>
-    <blockquote class="main-def def-blockquote">
-      <div class="definition">
-        {{#SelectionText}}<div id="selection" data-display-name="Text Selection">{{SelectionText}}</div>{{/SelectionText}}
-        {{#MainDefinition}}<div id="primary" data-display-name="Primary Definition">{{MainDefinition}}</div>{{/MainDefinition}}
-        <div id="glossaries" data-display-name="Glossaries">{{Glossary}}</div>
-      </div>
-    </blockquote>
+        <!-- The entire definition blockquote -->
+        <div class="def-info-container"><div class="def-info"></div></div>
+        <blockquote class="main-def def-blockquote">
+            <div class="definition">
+                {{#SelectionText}}
+                <div id="selection" data-display-name="Text Selection">{{SelectionText}}</div>
+                {{/SelectionText}}
+                {{#MainDefinition}}
+                <div id="primary" data-display-name="Primary Definition">{{MainDefinition}}</div>
+                {{/MainDefinition}}
+                <div id="glossaries" data-display-name="Glossaries">{{Glossary}}</div>
+            </div>
+        </blockquote>
 
         <!-- This is for the sentence that you see on mobile (positioned under definition), on Desktop, the sentence goes above the definition box, and this is hidden -->
         <div class="sentence-mobile">
@@ -326,170 +330,171 @@
         pitchTags.appendChild(pitchTagList);
     }
 
-  // Helper function to check if a field is just html without any content
-  function isAllHtml(content) {
-    const strippedContent = content.replace(/<\/?[^>]+(>|$)/g, "").trim();
-    return strippedContent === "" && content.match(/<\/?[^>]+(>|$)/g) !== null;
-  }
-
-
-  function isPrimaryEqualToGloss() {
-      const isJPMNConverted = document.querySelector(".definition li[data-details]");
-      if (isJPMNConverted) return false;
-      // single dict formatting
-      const isSingleDict = document.querySelectorAll("#glossaries > div > ol").length === 0;
-      if (isSingleDict) {
-          const primaryDictName = document.querySelector("#primary > div > i");
-          const glossariesDictName = document.querySelector("#glossaries > div > i");
-          // {glossary-brief} and {glossary-no-dictionary} formatting
-          if (!primaryDictName || !glossariesDictName) {
-              const primaryDict = document.querySelector("#primary > div > span");
-              const glossariesDict = document.querySelector("#glossaries > div > span");
-              return primaryDict.innerHTML === glossariesDict.innerHTML
-          }
-          return primaryDictName.textContent === glossariesDictName.textContent;
-      }
-
-      // multiple dicts
-      const primaryDicts = document.querySelectorAll("#primary li[data-dictionary]");
-      const glossariesDicts = document.querySelectorAll("#glossaries li[data-dictionary]");
-      return primaryDicts.length === glossariesDicts.length
-      /*
-      const primaryDictsNames = Array.from(primaryDicts).map( li => li.getAttribute("data-dictionary") );
-      const glossariesDictsNames = Array.from(glossariesDicts).map( li => li.getAttribute("data-dictionary") );
-      return glossariesDictsNames.every( li => primaryDictsNames.includes(li) ); 
-      */
-  }
-
-  // Removes Unnecessary definitions
-  function cleanUpDefinitions() {
-      const primary = document.getElementById("primary");
-      const glossaries = document.getElementById("glossaries");
-      if (primary && primary.textContent === "" ) {
-          console.log("primary empty");
-          primary.remove()
-      }
-      if (glossaries && glossaries.textContent === "") {
-          console.log("gloss empty");
-          glossaries.remove()
-      }
-      else if (primary && glossaries && isPrimaryEqualToGloss()) {
-          console.log("gloss = primary");
-          glossaries.remove()
-      }
-  }
-
-  function updateDefDisplay() {
-      const definitions = document.querySelectorAll(
-        ".main-def > .definition > div"
-      );
-
-      let n_defs = definitions.length;
-      if (n_defs === 1) definitions[0].classList.remove("hidden");
-      if (n_defs <= 1) return;
-
-      let currentIndex = document.head.getAttribute("data-def-index");
-      currentIndex = currentIndex % n_defs;
-      while (currentIndex < 0) currentIndex += n_defs;
-
-      for (let idx = 0; idx < n_defs; idx++) {
-          definitions[idx].classList.add("hidden");
-      }
-      definitions[currentIndex].classList.remove("hidden");
-
-      const defDisplayName = definitions[currentIndex].getAttribute("data-display-name")
-      const indexDisplay = document.querySelector(".def-info");
-      indexDisplay.style.opacity = 1;
-      indexDisplay.innerText = `${defDisplayName} ${currentIndex + 1}/${n_defs}`;
-  }
-
-  function setUpDefToggle() {
-    document.head.setAttribute("data-def-index", 0);
-    cleanUpDefinitions();
-
-    // hide all but first definition
-    let definitions = document.querySelectorAll(".main-def > .definition > div");
-    Array.from(definitions).slice(1).forEach( def => { def.classList.add("hidden"); });
-    // no need for toggling on less than 2 definitions
-    if (definitions.length < 2) return;
-
-    let mainDefContainer = document.querySelector(".main-def");
-
-    const leftEdge = document.createElement("div");
-    const rightEdge = document.createElement("div");
-    leftEdge.classList.add("left-edge");
-    leftEdge.classList.add("tappable");
-    rightEdge.classList.add("right-edge");
-    rightEdge.classList.add("tappable");
-    mainDefContainer.appendChild(leftEdge);
-    mainDefContainer.appendChild(rightEdge);
-
-    const changeIndex = (value) => {
-      // sync index between clicks and arrowkeys
-      index = Number(document.head.getAttribute("data-def-index"));
-      index += value;
-      document.head.setAttribute("data-def-index", index);
-      updateDefDisplay();
-    };
-
-    leftEdge.addEventListener("click", (e) => changeIndex(-1));
-    rightEdge.addEventListener("click", (e) => changeIndex(1));
-
-    // Add key listener only once per session
-    if (document.head.classList.contains("has-listener")) return;
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "ArrowLeft") changeIndex(-1);
-      else if (e.key === "ArrowRight") changeIndex(1);
-    });
-
-    document.head.classList.add("has-listener");
-  }
-
-  // By default, it's going to be SelectionText in that field, but what if it is empty i.e user has not selected any text?
-  function showCorrectDef() {
-    const selectionText = document.querySelector(".main-def > .definition");
-    if ((selectionText.innerHTML.trim() == "" && `{{MainDefinition}}`) && isAllHtml(`{{MainDefinition}}`) == false) {
-      selectionText.innerHTML = `<div id="primary">{{MainDefinition}}</div>`;
+    // Helper function to check if a field is just html without any content
+    function isAllHtml(content) {
+        const strippedContent = content.replace(/<\/?[^>]+(>|$)/g, "").trim();
+        return strippedContent === "" && content.match(/<\/?[^>]+(>|$)/g) !== null;
     }
-    else if (selectionText.innerHTML.trim() == "" && (`{{MainDefinition}}` == "" || isAllHtml(`{{MainDefinition}}`) == true))
-      selectionText.innerHTML = `<div id="glossaries">{{Glossary}}</div>`;
-  }
+
+
+    function isPrimaryEqualToGloss() {
+        const isJPMNConverted = document.querySelector(".definition li[data-details]");
+        if (isJPMNConverted) return false;
+        // single dict formatting
+        const isSingleDict = document.querySelectorAll("#glossaries > div > ol").length === 0;
+        if (isSingleDict) {
+            const primaryDictName = document.querySelector("#primary > div > i");
+            const glossariesDictName = document.querySelector("#glossaries > div > i");
+            // {glossary-brief} and {glossary-no-dictionary} formatting
+            if (!primaryDictName || !glossariesDictName) {
+                const primaryDict = document.querySelector("#primary > div > span");
+                const glossariesDict = document.querySelector("#glossaries > div > span");
+                return primaryDict.innerHTML === glossariesDict.innerHTML
+            }
+            return primaryDictName.textContent === glossariesDictName.textContent;
+        }
+
+        // multiple dicts
+        const primaryDicts = document.querySelectorAll("#primary li[data-dictionary]");
+        const glossariesDicts = document.querySelectorAll("#glossaries li[data-dictionary]");
+        return primaryDicts.length === glossariesDicts.length
+        /*
+        const primaryDictsNames = Array.from(primaryDicts).map( li => li.getAttribute("data-dictionary") );
+        const glossariesDictsNames = Array.from(glossariesDicts).map( li => li.getAttribute("data-dictionary") );
+        return glossariesDictsNames.every( li => primaryDictsNames.includes(li) ); 
+        */
+    }
+
+    // Removes Unnecessary definitions
+    function cleanUpDefinitions() {
+        const primary = document.getElementById("primary");
+        const glossaries = document.getElementById("glossaries");
+        if (primary && primary.textContent === "" ) {
+            console.log("primary empty");
+            primary.remove()
+        }
+        if (glossaries && glossaries.textContent === "") {
+            console.log("gloss empty");
+            glossaries.remove()
+        }
+        else if (primary && glossaries && isPrimaryEqualToGloss()) {
+            console.log("gloss = primary");
+            glossaries.remove()
+        }
+    }
+
+    // Display definition corresponding to index
+    function updateDefDisplay() {
+        const definitions = document.querySelectorAll(
+            ".main-def > .definition > div"
+        );
+
+        let n_defs = definitions.length;
+        if (n_defs === 1) definitions[0].classList.remove("hidden");
+        if (n_defs <= 1) return;
+
+        let currentIndex = document.head.getAttribute("data-def-index");
+        currentIndex = currentIndex % n_defs;
+        while (currentIndex < 0) currentIndex += n_defs;
+
+        for (let idx = 0; idx < n_defs; idx++) {
+            definitions[idx].classList.add("hidden");
+        }
+        definitions[currentIndex].classList.remove("hidden");
+
+        const defDisplayName = definitions[currentIndex].getAttribute("data-display-name")
+        const indexDisplay = document.querySelector(".def-info");
+        indexDisplay.style.opacity = 1;
+        indexDisplay.innerText = `${defDisplayName} ${currentIndex + 1}/${n_defs}`;
+    }
+
+    function setUpDefToggle() {
+        document.head.setAttribute("data-def-index", 0);
+        cleanUpDefinitions();
+
+        // hide all but first definition
+        let definitions = document.querySelectorAll(".main-def > .definition > div");
+        Array.from(definitions).slice(1).forEach( def => { def.classList.add("hidden"); });
+        // no need for toggling on less than 2 definitions
+        if (definitions.length < 2) return;
+
+        let mainDefContainer = document.querySelector(".main-def");
+
+        const leftEdge = document.createElement("div");
+        const rightEdge = document.createElement("div");
+        leftEdge.classList.add("left-edge");
+        leftEdge.classList.add("tappable");
+        rightEdge.classList.add("right-edge");
+        rightEdge.classList.add("tappable");
+        mainDefContainer.appendChild(leftEdge);
+        mainDefContainer.appendChild(rightEdge);
+
+        const changeIndex = (value) => {
+            // sync index between clicks and arrowkeys
+            index = Number(document.head.getAttribute("data-def-index"));
+            index += value;
+            document.head.setAttribute("data-def-index", index);
+            updateDefDisplay();
+        };
+
+        leftEdge.addEventListener("click", (e) => changeIndex(-1));
+        rightEdge.addEventListener("click", (e) => changeIndex(1));
+
+        // Add key listener only once per session
+        if (document.head.classList.contains("has-listener")) return;
+        document.addEventListener("keydown", (e) => {
+            if (e.key === "ArrowLeft") changeIndex(-1);
+            else if (e.key === "ArrowRight") changeIndex(1);
+        });
+
+        document.head.classList.add("has-listener");
+    }
+
+    // By default, it's going to be SelectionText in that field, but what if it is empty i.e user has not selected any text?
+    function showCorrectDef() {
+        const selectionText = document.querySelector(".main-def > .definition");
+        if ((selectionText.innerHTML.trim() == "" && `{{MainDefinition}}`) && isAllHtml(`{{MainDefinition}}`) == false) {
+            selectionText.innerHTML = `<div id="primary">{{MainDefinition}}</div>`;
+        }
+        else if (selectionText.innerHTML.trim() == "" && (`{{MainDefinition}}` == "" || isAllHtml(`{{MainDefinition}}`) == true))
+            selectionText.innerHTML = `<div id="glossaries">{{Glossary}}</div>`;
+    }
 
   // This just handles clicking and showing images
-  function clickImage() {
-    const modalBg = document.querySelector(".modal-bg");
-    const imgPopup = document.querySelector(".img-popup");
-    const image = document.querySelector(".image img");
+    function clickImage() {
+        const modalBg = document.querySelector(".modal-bg");
+        const imgPopup = document.querySelector(".img-popup");
+        const image = document.querySelector(".image img");
 
-    if (!image) return;
+        if (!image) return;
 
-    image.addEventListener("click", () => {
-        const imgPopupContainer = document.createElement("div");
-        const imgPopupImg = document.createElement("img");
+        image.addEventListener("click", () => {
+            const imgPopupContainer = document.createElement("div");
+            const imgPopupImg = document.createElement("img");
 
-        imgPopupContainer.classList.add("img-popup-container");
-        imgPopupImg.src = image.src;
-        imgPopupImg.classList.add("img-popup-img");
+            imgPopupContainer.classList.add("img-popup-container");
+            imgPopupImg.src = image.src;
+            imgPopupImg.classList.add("img-popup-img");
 
-        if (image.height > image.width) {
-            imgPopupContainer.style.height = "calc(100% - 20px)";
-            imgPopupContainer.style.width = "max-content";
-        }
-        imgPopup.innerHTML = "";
-        imgPopup.appendChild(imgPopupContainer);
-        imgPopupContainer.appendChild(imgPopupImg);
+            if (image.height > image.width) {
+                imgPopupContainer.style.height = "calc(100% - 20px)";
+                imgPopupContainer.style.width = "max-content";
+            }
+            imgPopup.innerHTML = "";
+            imgPopup.appendChild(imgPopupContainer);
+            imgPopupContainer.appendChild(imgPopupImg);
 
-        document.body.classList.add("img-popup");
-        modalBg.style.display = "block";
-        imgPopupContainer.style.display = "flex";
-    });
+            document.body.classList.add("img-popup");
+            modalBg.style.display = "block";
+            imgPopupContainer.style.display = "flex";
+        });
 
-    modalBg.addEventListener("click", () => {
-        document.body.classList.remove("img-popup");
-        modalBg.style.display = "none";
-        imgPopup.innerHTML = "";
-    });
-  }
+        modalBg.addEventListener("click", () => {
+            document.body.classList.remove("img-popup");
+            modalBg.style.display = "none";
+            imgPopup.innerHTML = "";
+        });
+    }
 
     // Handles what you see when you hover over frequency dropdown icon
     function frequencyHover() {
@@ -522,49 +527,49 @@
         }
     }
 
-  // Hides the dictionary user selected in MainDefinition in Glossary field, if any
-  function hideCorrectDefinition() {
-    // Do nothing if css rule already exists
-    if (document.querySelector("blockquote.main-def style")) return;
+    // Hides the dictionaries user selected in MainDefinition in Glossary field, if any
+    function hideCorrectDefinition() {
+        // Do nothing if css rule already exists
+        if (document.querySelector("blockquote.main-def style")) return;
 
-    let primaryDicts = document.querySelectorAll("#primary li[data-dictionary]");
-    if (primaryDicts.length === 0) return;
+        let primaryDicts = document.querySelectorAll("#primary li[data-dictionary]");
+        if (primaryDicts.length === 0) return;
 
-        let style = document.createElement('style');
-        style.type = 'text/css';
+            let style = document.createElement('style');
+            style.type = 'text/css';
 
-        const cssSelector = Array.from(primaryDicts).map((dict) =>
-            `#glossaries li[data-dictionary="${dict.getAttribute("data-dictionary")}"]`
-        ).join(", ");
-        const cssRules = `${cssSelector} { display:none !important; }`;
-        style.appendChild(document.createTextNode(cssRules));
+            const cssSelector = Array.from(primaryDicts).map((dict) =>
+                `#glossaries li[data-dictionary="${dict.getAttribute("data-dictionary")}"]`
+            ).join(", ");
+            const cssRules = `${cssSelector} { display:none !important; }`;
+            style.appendChild(document.createTextNode(cssRules));
 
-        let defContainer = document.querySelector("blockquote.main-def");
-        defContainer.appendChild(style);
+            let defContainer = document.querySelector("blockquote.main-def");
+            defContainer.appendChild(style);
     }
 
-  // Moves Primary Dicts into the same list
-  function movePrimaryDicts() {
-    let primaryDicts = document.querySelectorAll("#primary li[data-dictionary]");
-    let firstList = document.querySelector("#primary .yomitan-glossary > ol:has( li[data-dictionary])");
-    for (let idx = 1; idx < primaryDicts.length; idx++) {
-        firstList.appendChild(primaryDicts[idx]);
+    // Moves Primary Dicts into the same list
+    function movePrimaryDicts() {
+        let primaryDicts = document.querySelectorAll("#primary li[data-dictionary]");
+        let firstList = document.querySelector("#primary .yomitan-glossary > ol:has( li[data-dictionary])");
+        for (let idx = 1; idx < primaryDicts.length; idx++) {
+            firstList.appendChild(primaryDicts[idx]);
+        }
     }
-  }
 
-  // Initialize all functions!!!
-  function initialize() {
-    tweakHTML();
-    paintTargetWord();
-    constructPitch();
-    setUpDefToggle();
-    //showCorrectDef();
-    clickImage();
-    frequencyHover();
-    setDHHeight();
-    hideCorrectDefinition();
-    movePrimaryDicts();
-  }
+    // Initialize all functions!!!
+    function initialize() {
+        tweakHTML();
+        paintTargetWord();
+        constructPitch();
+        setUpDefToggle();
+        //showCorrectDef();
+        clickImage();
+        frequencyHover();
+        setDHHeight();
+        hideCorrectDefinition();
+        movePrimaryDicts();
+    }
 
     initialize();
 </script>
